[gd_scene load_steps=18 format=2]

[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/knight_f_idle_anim_f1.png" type="Texture" id=1]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/knight_f_idle_anim_f2.png" type="Texture" id=2]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/knight_f_idle_anim_f0.png" type="Texture" id=3]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/knight_f_idle_anim_f3.png" type="Texture" id=4]
[ext_resource path="res://scenes/MOBS/character/character.gd" type="Script" id=5]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/knight_f_run_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/knight_f_run_anim_f2.png" type="Texture" id=7]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/knight_f_run_anim_f3.png" type="Texture" id=8]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/frames/knight_f_run_anim_f1.png" type="Texture" id=9]
[ext_resource path="res://sound effects/Hit damage 1.wav" type="AudioStream" id=10]
[ext_resource path="res://0x72_DungeonTilesetII_v1.4/light.png" type="Texture" id=11]
[ext_resource path="res://scenes/MOBS/character/Light2D.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.7273, 4.43221 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "running",
"speed": 10.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "damage_blinker"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 104.307

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3.76688, 2.50756 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 5 )
speed_boost = 50
damage_demon = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4.37391 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -13.9068 )
frames = SubResource( 2 )
animation = "idle"
frame = 2
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage_blinker = SubResource( 3 )

[node name="damage_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="damage_cooldown" type="Timer" parent="."]
one_shot = true

[node name="character_light" type="Node2D" parent="."]

[node name="Light2D" type="Light2D" parent="character_light"]
scale = Vector2( 0.380002, 0.380002 )
texture = ExtResource( 11 )
color = Color( 1, 0.882353, 0.729412, 1 )
energy = 1.2
mode = 2
shadow_enabled = true
shadow_gradient_length = 1.5
shadow_filter = 5
shadow_filter_smooth = 6.5
shadow_item_cull_mask = 2
script = ExtResource( 12 )

[node name="Timer" type="Timer" parent="character_light"]
wait_time = 0.1
one_shot = true

[node name="enemies_visible" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemies_visible"]
shape = SubResource( 4 )

[node name="area2d_detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area2d_detector"]
position = Vector2( 0, -2.67733 )
shape = SubResource( 5 )

[connection signal="body_entered" from="enemies_visible" to="." method="_on_enemies_visible_body_entered"]
[connection signal="body_exited" from="enemies_visible" to="." method="_on_enemies_visible_body_exited"]
[connection signal="area_entered" from="area2d_detector" to="." method="_on_area2d_detector_area_entered"]
[connection signal="area_exited" from="area2d_detector" to="." method="_on_area2d_detector_area_exited"]
